# GenAISolutions

./: .gitignore
ProcurementDemo/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure.yaml  pyproject.toml
ProcurementDemo/docs/: BACKLOG.md  PROJECT.md
ProcurementDemo/docs/adrs/: 0001-foundry-and-maf-not-langgraph-standalone.md
ProcurementDemo/docs/diagrams/: architecture.html
ProcurementDemo/infra/: README.md  main.bicep  main.bicepparam
ProcurementDemo/infra/scripts/: azd-lifecycle.sh
ProcurementDemo/tests/: cold-start-history.csv
ProcurementDemo/tests/unit/: test_smoke.py
