[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procurement-agentic-demo"
version = "0.0.1"
description = "A portfolio-grade demonstration of an enterprise agentic procurement workflow on Microsoft Azure."
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "black==24.10.0",
    "pytest==8.3.3",
    "pre-commit==4.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "data*", "infra*", "docs*", "frontend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
